[package]
name = "pisa-jr"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"

[dependencies]
structopt = "0.3"
itertools = "0.8"
trec-text = { git = "https://github.com/pisa-engine/trec-text-rs.git", branch = "master" }
libflate = "0.1"

[[bin]]
name = "index"
path = "src/index.rs"

[[bin]]
name = "search"
path = "src/search.rs"
